--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^5.10.9",
     "multer": "^1.4.2",
     "socket.io": "^2.3.0",
-    "uuid": "^8.3.1"
+    "uuid": "^8.3.1",
+    "validator": "^13.1.17"
   }
 }
